--- a/Areas/Admin/Views/Default/Index.cshtml
+++ b/Areas/Admin/Views/Default/Index.cshtml
@@ -97,5 +97,18 @@
             <h3>QUẢN LÝ SẢN PHẨM</h3>
             <p>Thêm, sửa, xóa và cập nhật giá sản phẩm</p>
         </a>
+
+        <a href="@Url.Action("Index", "User")" class="menu-card">
+            <i class="fa-solid fa-user"></i>
+            <h3>QUẢN LÝ NGƯỜI DÙNG</h3>
+        </a>
+        <a href="@Url.Action("Index", "Customer")" class="menu-card">
+            <i class="fa-solid fa-user-tie"></i>
+            <h3>QUẢN LÝ KHÁCH HÀNG</h3>
+        </a>
+        <a href="@Url.Action("Index", "OrderList")" class="menu-card">
+            <i class="fa-solid fa-table-list"></i>
+            <h3>QUẢN LÝ ĐƠN HÀNG</h3>
+        </a>
     </div>
 </div>
