--- a/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -17,10 +17,11 @@
             </button>
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
-                    <li>@Html.ActionLink("Danh mục", "Index", "Admin/Categories", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Sản phẩm", "Index", "Admin/Products", new { area = "" }, new { @class = "nav-link" })</li>
-
-
+                    <li>@Html.ActionLink("Quản lý danh mục", "Index", "Admin/Categories", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Quản lý sản phẩm", "Index", "Admin/Products", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Quản lý người dùng", "Index", "Admin/User", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Quản lý khách hàng", "Index", "Admin/Customer", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Quản lý đơn hàng", "Index", "Admin/OrderList", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
         </div>
