--- a/Areas/Admin/Views/Products/PartialView_CreateEditProducts.cshtml
+++ b/Areas/Admin/Views/Products/PartialView_CreateEditProducts.cshtml
@@ -1,69 +1,104 @@
 ﻿@model TrangwebCellPhoneS.Models.Product
-<head>
-    <style>
-        textarea {
-            width: 100%;
-            height: 150px;
-            padding: 12px 5px;
-            box-sizing: border-box;
-            border: 1px solid grey;
-            border-radius: 20px;
-            background-color: whitesmoke;
-            resize: none;
+
+<style>
+    .form-group {
+        margin-bottom: 20px;
+    }
+
+    .control-label {
+        font-weight: 600;
+        margin-bottom: 8px;
+        display: block;
+        color: #555;
+    }
+
+    .form-control-custom {
+        width: 100%;
+        padding: 10px;
+        border: 1px solid #ced4da;
+        border-radius: 4px;
+        font-size: 14px;
+        transition: border-color 0.3s;
+    }
+
+        .form-control-custom:focus {
+            border-color: #007bff;
+            outline: none;
+            box-shadow: 0 0 5px rgba(0,123,255,0.25);
         }
-    </style>
-</head>
-<div class="form-group">
-    @Html.LabelFor(model => model.CategoryID, "CategoryID", htmlAttributes: new { @class = "control-label col-md-2" })
-    <div class="col-md-10">
-        @Html.DropDownList("CategoryID", null, htmlAttributes: new { @class = "form-control" })
-        @Html.ValidationMessageFor(model => model.CategoryID, "", new { @class = "text-danger" })
+
+    .form-actions {
+        margin-top: 30px;
+        text-align: right;
+        border-top: 1px solid #eee;
+        padding-top: 20px;
+    }
+
+    .btn-save {
+        background-color: #007bff;
+        color: white;
+        padding: 10px 30px;
+        border: none;
+        border-radius: 4px;
+        font-weight: bold;
+        cursor: pointer;
+    }
+
+        .btn-save:hover {
+            background-color: #0056b3;
+        }
+
+    .btn-back {
+        color: #6c757d;
+        text-decoration: none;
+        margin-right: 20px;
+        font-size: 14px;
+    }
+</style>
+
+<div class="row">
+    <div class="col-md-6">
+        <div class="form-group">
+            <label class="control-label">Tên sản phẩm <span class="text-danger">*</span></label>
+            @Html.EditorFor(model => model.ProductName, new { htmlAttributes = new { @class = "form-control-custom", placeholder = "Nhập tên sản phẩm" } })
+            @Html.ValidationMessageFor(model => model.ProductName, "", new { @class = "text-danger" })
+        </div>
+
+        <div class="form-group">
+            <label class="control-label">Danh mục <span class="text-danger">*</span></label>
+            @Html.DropDownList("CategoryID", null, htmlAttributes: new { @class = "form-control-custom" })
+            @Html.ValidationMessageFor(model => model.CategoryID, "", new { @class = "text-danger" })
+        </div>
+
+        <div class="form-group">
+            <label class="control-label">Giá bán (VNĐ) <span class="text-danger">*</span></label>
+            @Html.EditorFor(model => model.ProductPrice, new { htmlAttributes = new { @class = "form-control-custom", type = "number" } })
+            @Html.ValidationMessageFor(model => model.ProductPrice, "", new { @class = "text-danger" })
+        </div>
+
+        <div class="form-group">
+            <label class="control-label">Link Hình ảnh</label>
+            @Html.EditorFor(model => model.ProductImage, new { htmlAttributes = new { @class = "form-control-custom", placeholder = "/Content/Images/..." } })
+            @Html.ValidationMessageFor(model => model.ProductImage, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="col-md-6">
+        <div class="form-group">
+            <label class="control-label">Thông số kỹ thuật</label>
+            @Html.TextAreaFor(model => model.ProductSpecifications, new { @class = "form-control-custom", @rows = "5", placeholder = "Màn hình: ... \nCPU: ..." })
+            @Html.ValidationMessageFor(model => model.ProductSpecifications, "", new { @class = "text-danger" })
+        </div>
+
+        <div class="form-group">
+            <label class="control-label">Tính năng nổi bật</label>
+            @Html.TextAreaFor(model => model.outstandingFeatures, new { @class = "form-control-custom", @rows = "5", placeholder = "- Tính năng 1\n- Tính năng 2" })
+            @Html.ValidationMessageFor(model => model.outstandingFeatures, "", new { @class = "text-danger" })
+        </div>
     </div>
 </div>
 
-<div class="form-group">
-    @Html.LabelFor(model => model.ProductName, htmlAttributes: new { @class = "control-label col-md-2" })
-    <div class="col-md-10">
-        @Html.EditorFor(model => model.ProductName, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.ProductName, "", new { @class = "text-danger" })
-    </div>
-</div>
-
-<div class="form-group">
-    @Html.LabelFor(model => model.ProductSpecifications, htmlAttributes: new { @class = "control-label col-md-2" })
-    <div class="col-md-10">
-        @Html.TextAreaFor(model => model.ProductSpecifications, new { @class = "form-control", @rows = "5" })
-        @Html.ValidationMessageFor(model => model.ProductSpecifications, "", new { @class = "text-danger" })
-    </div>
-</div>
-
-<div class="form-group">
-    @Html.LabelFor(model => model.outstandingFeatures, htmlAttributes: new { @class = "control-label col-md-2" })
-    <div class="col-md-10">
-        @Html.TextAreaFor(model => model.outstandingFeatures, new { @class = "form-control", @rows = "5" })
-        @Html.ValidationMessageFor(model => model.outstandingFeatures, "", new { @class = "text-danger" })
-    </div>
-</div>
-
-<div class="form-group">
-    @Html.LabelFor(model => model.ProductPrice, htmlAttributes: new { @class = "control-label col-md-2" })
-    <div class="col-md-10">
-        @Html.EditorFor(model => model.ProductPrice, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.ProductPrice, "", new { @class = "text-danger" })
-    </div>
-</div>
-
-<div class="form-group">
-    @Html.LabelFor(model => model.ProductImage, htmlAttributes: new { @class = "control-label col-md-2" })
-    <div class="col-md-10">
-        @Html.EditorFor(model => model.ProductImage, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.ProductImage, "", new { @class = "text-danger" })
-    </div>
-</div>
-<br />
-<div class="form-group">
-    <div class="col-md-offset-2 col-md-10">
-        <input type="submit" value="Lưu" class="btn btn-primary" /> | 
-        @Html.ActionLink("Chở về danh sách", "Index", null, new { @class = "btn btn-primary" })
-    </div>
+<div class="form-actions">
+    @Html.ActionLink("Quay lại danh sách", "Index", null, new { @class = "btn-back" })
+    <input type="submit" value="Lưu Sản Phẩm" class="btn-save" />
 </div>
