--- a/Views/Cart/Index2.cshtml
+++ b/Views/Cart/Index2.cshtml
@@ -40,7 +40,7 @@
     <h2>GIỎ HÀNG</h2>
     <div class="shoppingcart">
         @if (Model == null)
-        {<p>Bạn chưa có sản phẩm nao trong giỏ. </p> }
+        {<p>Bạn chưa có sản phẩm nào trong giỏ. </p> }
         else
         {
             <div class="col-md-8">
