--- a/Views/Home/ProductDetails.cshtml
+++ b/Views/Home/ProductDetails.cshtml
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="action-buttons">
-                <a href="@Url.Action("AddToCart", "Cart", new { id = Model.product.ProductID, quantity = 1 })" class="btn-buy">
+                <a href="@Url.Action("Shipping", "Order", new { id = Model.product.ProductID, quantity = 1 })" class="btn-buy">
                     MUA NGAY <br>
                     <span style="font-size: 12px; font-weight: normal;">(Giao tận nơi hoặc lấy tại cửa hàng)</span>
                 </a>
